# open-paxel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  dev.py  docker-compose.yml  install.ps1  install.sh  package-lock.json  pyproject.toml
brain_dump/: __init__.py  __main__.py  cli.py  config.py  dev_runner.py  logging_config.py  pipeline.py  protocols.py  reset.py
brain_dump/analysis/: context.py
brain_dump/api/: __init__.py  app.py
brain_dump/api/routes/: profile.py  uploads.py
brain_dump/db/: __init__.py  models.py  repository.py
brain_dump/discover/: __init__.py  scanner.py
brain_dump/metrics/: __init__.py  heuristics.py
brain_dump/models/: __init__.py  domain.py  profile_narrative.py
brain_dump/parser/: __init__.py  auto.py  claude_jsonl.py  patterns.py  text_session.py
brain_dump/profile/: __init__.py  aggregate.py  enrich.py  insights.py  narrative_heuristic.py  narrative_llm.py
brain_dump/redact/: __init__.py  excerpts.py  transcript.py
brain_dump/scorer/: __init__.py  chunk_summarizer.py  openai_scorer.py  openai_tracker.py  registry.py
brain_dump/text/: __init__.py  chunking.py  document_scan.py  tokens.py
brain_dump/upload/: worker.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: InsightCard.tsx  (+6 more)
open_paxel/: __init__.py  __main__.py  cli.py  config.py  dev_runner.py  logging_config.py  protocols.py  reset.py
open_paxel/analysis/: context.py
open_paxel/api/: __init__.py  app.py
open_paxel/db/: __init__.py  models.py  repository.py
open_paxel/decisions/: __init__.py  catalog.py  stats.py
open_paxel/discover/: __init__.py  scanner.py
open_paxel/git/: __init__.py  reader.py
open_paxel/llm/: __init__.py  client.py  structured.py
open_paxel/metrics/: __init__.py  heuristics.py
open_paxel/models/: __init__.py  domain.py  pipeline_models.py  scores.py
open_paxel/parser/: __init__.py  auto.py  claude_jsonl.py  filters.py  text_session.py
open_paxel/pipeline/: __init__.py  analysis.py  context.py  orchestrator.py
open_paxel/profile/: __init__.py  aggregate.py  assembler.py  enrich.py  insights.py  narrative_heuristic.py  narrative_llm.py
open_paxel/redact/: __init__.py  excerpts.py  transcript.py
open_paxel/scorer/: __init__.py  chunk_summarizer.py  decision_classifier.py  episode_scorer.py  openai_scorer.py  openai_tracker.py  registry.py  session_narrative.py  transcript_condenser.py
open_paxel/text/: __init__.py  chunking.py  document_scan.py  tokens.py
open_paxel/upload/: worker.py
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
tests/: test_api_upload.py  test_chunk_summarization.py  test_cli_serve.py  test_config.py  test_ephemeral_jobs.py  test_llm.py  test_parser.py  test_paxel_pipeline.py  test_pipeline.py  test_profile_insights.py  test_profile_narrative.py  test_session_rename.py  test_spa_routes.py  test_text_parser.py  test_text_tokens.py  test_transcript_condenser.py
tests/fixtures/: sample.jsonl  sample_session.md  sample_session.txt  string_tool_result.jsonl
(+16 files in other folders)
