[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-dump"
version = "0.1.0"
description = "Local-first Claude Code session analyzer and builder profile"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "openai>=1.50",
  "httpx>=0.27",
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
brain-dump = "brain_dump.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["brain_dump"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
